--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: '/'
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: es
+lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful blog.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://blog.tomasps.tk'
 
 github:
   username: tresillo2017            # change to your github username
@@ -87,7 +87,7 @@ avatar: '/avatar.jpg'
 toc: true
 
 comments:
-  active: disqus       # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus     # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: tomas-14    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -97,14 +97,14 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:              # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:           # optional, default to 'pathname'
-    input_position:    # optional, default to 'bottom'
-    lang:              # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: tresillo2017/blogv2          # <gh-username>/<repo>
+    repo_id: R_kgDOI3VuPQ
+    category: General
+    category_id: DIC_kwDOI3VuPc4CT4Sv
+    mapping: pathname           # optional, default to 'pathname'
+    input_position: bottom    # optional, default to 'bottom'
+    lang: es          # optional, default to the value of `site.lang`
+    reactions_enabled: 1 # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
