--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,12 +6,7 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
-
-sille_bille:
-  name: Dinesh Prasanth Moluguwan Krishnamoorthy
-  twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
+tomas:
+  name: Tomas Palma Sanchez
+  twitter: toomas_ps
+  url: https://github.com/tresillo2017
